syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ddd.bundleclient";
option java_outer_classname = "BundleClientProto";
option objc_class_prefix = "BTP";

package protobuf;

message ReqFilePath { string value = 1; }

message RespFileInfo {
  string name = 1;
  int64 size = 2;
}

enum Status {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message MetaData {
  string name = 1;
  string type = 2;
}

message File {
  bytes content = 1;
}


message FileUploadRequest {
  oneof request {
    MetaData metadata = 1;
    File file = 2;
  }
}

message FileUploadResponse {
  string name = 1;
  Status status = 2;
}

message Bytes { bytes value = 1; }

service FileService {
  rpc UploadFile(stream FileUploadRequest) returns (FileUploadResponse) {}
  rpc DownloadFile(ReqFilePath) returns (stream Bytes) {}
}

