syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.sjsu.dtn.adapter.communicationservice";

service DTNAdapter {
  rpc saveData (AppData) returns (AppData) {}
  rpc prepareData (ClientData) returns (PrepareResponse) {}
}

message AppData {
  string clientId = 1;
  repeated bytes data = 2;
}

message PrepareResponse {
  StatusCode code = 1;
}

enum StatusCode {
  SUCCESS = 0;
  FAIL = 1;
  CLIENT_NOT_REGISTERED = 2;
}

message ClientData{
  string clientId = 1;
}